# axum-react

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20240415152659_init.up.sql
backend/src/: handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
frontend/: package.json
frontend/src/: App.jsx
frontend/src/pages/: Login.jsx  Profile.jsx  Register.jsx
